Updating internal links

--- a/Sem_3/Java_OOPs/HomeWork/2022-09-20.md
+++ b/Sem_3/Java_OOPs/HomeWork/2022-09-20.md
@@ -19,9 +19,9 @@ Tags: #homework #h/w
 # 📑 H/W
 
 ## 📃 Summary of Notes
-1. [Explain Java Features.](#1)
-2. [Explain JVM.](#2)
-3. [What is Byte Code.](#3)
+1. [Explain Java Features.](<#1>)
+2. [Explain JVM.](<#2>)
+3. [What is Byte Code.](<#3>)
 4. [Is Java platform-indipendent? (comment onto it)](#4)
 5. [Java Program Syntax. (With Explanation.)](#5)
 6. [Discuss Structure of Java Program.](#6)
