--- a/Sem_3/IT/Classes_Notes/Module_3/2022-10-15.md
+++ b/Sem_3/IT/Classes_Notes/Module_3/2022-10-15.md
@@ -19,48 +19,45 @@ Tags: #xml
 # 📑 XML
 
 ## 📃 Summary of Notes
-- [❗❓ Info](#-info)
-- [📑 XML](#-xml)
-	- [📃 Summary of Notes](#-summary-of-notes)
-- [**XML**](#xml)
-	- [**XML vs HTML**](#xml-vs-html)
-	- [**XML Structure**](#xml-structure)
-		- [**XML Syntax**](#xmlsyntax)
-		- [**Prolog**](#prolog)
-		- [**Body**](#body)
-	- [**Well Formed**](#well-formed)
-		- [**XML Rules**](#xml-rules)
-	- [**XML Example**](#xml-example)
-	- [**XML Declaration**](#xml-declaration)
-	- [**XML Element**](#xml-element)
-	- [**Naming Rules**](#naming-rules)
-	- [**Empty Elements**](#empty-elements)
-	- [**XML Attributes**](#xml-attributes)
-	- [**Parsing**](#parsing)
-	- [**XML Special Characters**](#xml-special-characters)
-	- [**Elements vs Attributes**](#elements-vs-attributes)
-	- [**Displaying XML**](#displaying-xml)
-	- [**XML Namespaces**](#xml-namespaces)
-		- [**xmlns Attribute**](#xmlns-attribute)
-	- [**XML Schema Languages**](#xml-schema-languages)
-	- [**XML Validation**](#xml-validation)
-- [**DTD**](#dtd)
-	- [**Internal DTD**](#internal-dtd)
-	- [**External DTD**](#external-dtd)
-	- [**Declaring Elements in DTD**](#declaring-elements-in-dtd)
-	- [**XML CDATA Sections**](#xml-cdata-sections)
-		- [**CDATA Rules**](#cdata-rules)
-	- [**PCDATA**](#pcdata)
-	- [**DTD Attributes**](#dtd-attributes)
-	- [**Entities**](#entities)
-	- [**DTD Mixed Content**](#dtd-mixed-content)
-	- [**XML DOM**](#xml-dom)
-		- [**XML DOM Nodes**](#xml-dom-nodes)
-		- [**XML Nodes Types**](#xml-nodes-types)
-		- [**Node Parents, Children, and Siblings**](#node-parents-children-and-siblings)
-	- [**First Child \& Last Child**](#first-child--last-child)
-		- [**Accessing Nodes**](#accessing-nodes)
-	- [**JAVA and DOM** (*note: I didn't get this one have to lean about this.*)](#java-and-dom-note-i-didnt-get-this-one-have-to-lean-about-this)
+- [XML](<#XML>)
+	- [XML vs HTML](<#XML vs HTML>)
+	- [XML Structure](<#XML Structure>)
+		- [XML Syntax](<#XML Syntax>)
+		- [Prolog](<#Prolog>)
+		- [Body](<#Body>)
+	- [Well Formed](<#Well Formed>)
+		- [XML Rules](<#XML Rules>)
+	- [XML Example](<#XML Example>)
+	- [XML Declaration](<#XML Declaration>)
+	- [XML Element](<#XML Element>)
+	- [Naming Rules](<#Naming Rules>)
+	- [Empty Elements](<#Empty Elements>)
+	- [XML Attributes](<#XML Attributes>)
+	- [Parsing](<#Parsing>)
+	- [XML Special Characters](<#XML Special Characters>)
+	- [Elements vs Attributes](<#Elements vs Attributes>)
+	- [Displaying XML](<#Displaying XML>)
+	- [XML Namespaces](<#XML Namespaces>)
+		- [xmlns Attribute](<#xmlns Attribute>)
+	- [XML Schema Languages](<#XML Schema Languages>)
+	- [XML Validation](<#XML Validation>)
+- [DTD](<#DTD>)
+	- [Internal DTD](<#Internal DTD>)
+	- [External DTD](<#External DTD>)
+	- [Declaring Elements in DTD](<#Declaring Elements in DTD>)
+	- [XML CDATA Sections](<#XML CDATA Sections>)
+		- [CDATA Rules](<#CDATA Rules>)
+	- [PCDATA](<#PCDATA>)
+	- [DTD Attributes](<#DTD Attributes>)
+	- [Entities](<#Entities>)
+	- [DTD Mixed Content](<#DTD Mixed Content>)
+	- [XML DOM](<#XML DOM>)
+		- [XML DOM Nodes](<#XML DOM Nodes>)
+		- [XML Nodes Types](<#XML Nodes Types>)
+		- [Node Parents, Children, and Siblings](<#Node Parents, Children, and Siblings>)
+	- [First Child \& Last Child](<#First Child \& Last Child>)
+		- [Accessing Nodes](<#Accessing Nodes>)
+	- [JAVA and DOM](<#JAVA and DOM>)
 ---
 # **XML**
 - XML *stands for* **[[xml|eXtensible Markup Language]]**.
@@ -729,7 +726,8 @@ graph TD
 ```
 
 ---
-## **JAVA and DOM** (*note: I didn't get this one have to lean about this.*)
+## **JAVA and DOM** 
+- (*note: I didn't get this one have to lean about this.*)
 - **Instantiate XML file:** DOM parser loads the XML file into memory and consider every tag as an element.
 - **Get root node:** Document class provides the getDocumentElement() method to get the root node and the element of the XML file.
 - **Get all nodes:** The `getElementByTagName()` method retrieves all the specific tag name  from the XML file. Where `ELEMENT_NODE` type refers to a non-text node which has sub-elements. If we need to access all nodes from the starting, including the root node, we can recursively call the `getChildElement()` method.
